# umbra-mirror

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  beta_test_plan.md  check_results.py  convert_eeg_emg_to_npz.py  data_augmentation.py  eeg2emg_run.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: SonarCloud.yml  ci.yml  docker.yml  model-benchmark.yml  model-regression.yml  sonnarQube.delete
data/: .gitignore  HS_P1_S1.mat.dvc  data.txt.dvc  ninapro.dvc
data/comparison_reports/: ci_history.csv  comparison_20260317_090600_ci_local.json
data/eeg_emg_comparison_reports/: eeg_emg_cmp_20260329_105832_compare.json
data/eeg_emg_hardware_reports/: eeg_emg_hw_20260329_105857_profile.json
data/eeg_emg_quality_reports/: eeg_emg_q_20260329_105744_dataset_augmented_default.json
data/ninapro/: subjects.csv
docs/: beta_test_plan.md  dashboard_emg_eeg_emg_roadmap.md
scripts/: regression_check.py  run_comparison.py  setup.sh
src/: app.py  config.py  main.py  math.py  model.py  preprocessing.py  processing.py  train.py
src/app/: preprocess.py
src/dashboard/: __init__.py  app.py  dataset_quality.py  eeg_emg_dataset_quality.py  eeg_emg_model_compare.py  eeg_emg_torch_hardware.py  hardware_profiler.py  model_comparator.py
src/dashboard/eeg_emg/: dataset_quality_page.py  eeg2emg_dashboard.py  hardware_impact_page.py  model_comparator_page.py
src/dashboard/emg/: dataset_quality.py  hand_movement_decoder.py  hardware_impact_page.py  model_comparator_page.py
src/dashboard/pages/: 1_Dataset_Quality_Check.py  2_Model_Comparator.py  3_Hardware_Impact_Tracker.py
src/eeg_emg/: __init__.py  check_results.py  convert_eeg_emg_to_npz.py  dashboard_defaults.py  data_augmentation.py  eeg2emg_best.pth  eeg2emg_inference.py  eeg2emg_metrics.py  eeg2emg_run.py
src/emg_movement/: __init__.py  gestures.py  model.py  preprocessing.py  train.py  utils.py
src/models/: cnn_lstm_1.keras  cnn_lstm_emg_v2.keras  cnn_lstm_emg_v3.keras
src/scripts/: utils.py
tests/: conftest.py  test_eeg2emg_inference.py  test_eeg_emg_dataset_quality.py  test_emg_train_import.py  test_env.py  test_model.py
tests/eeg_emg/: test_single_subject_split.py
