[project]
name = "umbra"
version = "0.1.0"
description = "EMG hand-gesture recognition with CNN-LSTM on NinaPro dataset"
requires-python = ">=3.11"
readme = "README.md"

# ── Ruff (lint + format) ──────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in default argument (common in ML scripts)
    "UP007", # X | Y union syntax (keep compat with older stubs)
]

[tool.ruff.lint.per-file-ignores]
# Streamlit multi-page apps require sys.path manipulation before other imports.
# The E402 violations here are intentional — suppressing them is correct.
"src/dashboard/app.py" = ["E402"]
"src/dashboard/model_comparator.py" = ["E402"]
"src/dashboard/pages/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # many ML libs lack complete stubs
warn_unused_ignores = true
warn_return_any = false         # too noisy with TF/Keras dynamic typing
exclude = ["tests/", "scripts/"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=xml:coverage.xml --cov-report=term-missing"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ── Coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "src/eeg_emg/*"]  # stub package

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
